--- a/css/styles.css
+++ b/css/styles.css
@@ -681,15 +681,17 @@ address{
     
 }
 
-.join-container{
-    margin-right: 93px;
-}
+
 
 
 
 .social-links-foot{
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
+}
+
+.subscribe{
+    margin-left: auto;
 }
 
 .subscribe-telegram-foot{
@@ -713,7 +715,7 @@ address{
     line-height: 1.87;
     letter-spacing: 0.06em;
 
-
+    cursor: pointer;
 }
 
 .subscribe-form-title{
@@ -748,6 +750,7 @@ address{
     border-radius: 4px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background-color: transparent;
+    color: var(--white-text-color);
 
     outline: transparent;
 }
@@ -958,10 +961,9 @@ address{
 .modal{
     /* центрування абсолютно позиційованих елементів */
     width: 528px;
-    height: 581px;
     background-color: #fff;
     border-radius: 4px;
-    padding: 40px 40px 40px 40px;
+    padding: 40px;
 
     position: absolute;
     top: 50%;
@@ -1122,14 +1124,15 @@ address{
     padding-left: 36px;
     outline: transparent;
 
-    transition: border-color var(--animation);
+    transition: border-color var(--animation), fill var(--animation);
   }
 
-  .register-form-input:focus {
+  .register-form-input:focus, .register-form-input:hover {
     border-color: var(--accent-color);
   }
 
-  .register-form-input:focus + .register-form-icon {
+  .register-form-input:focus + .register-form-icon,
+  .register-form-input:hover+.register-form-icon {
     fill: var(--accent-color);
   }
 
@@ -1144,9 +1147,12 @@ address{
     height: 120px;
 
     padding: 12px 16px;
+
+    transition: border-color var(--animation);
 }
 
-  .register-form-message:focus {
+  .register-form-message:focus,
+  .register-form-message:hover {
     border-color: var(--accent-color);
     
   }
